update content across multiple sections, fixed popup bug on mobile, replaced swag with club500

--- a/assets/gitbook/homepage.css
+++ b/assets/gitbook/homepage.css
@@ -267,6 +267,40 @@ a {
     border-bottom: dashed 1px #4C4D58;
 }
 
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 200ms;
+    visibility: hidden;
+    opacity: 0;
+  }
+.overlay:target {
+    visibility: visible;
+    opacity: 1;
+}
+
+.popup {
+    margin: 300px auto;
+    padding: 20px;
+    position: relative;
+    transition: all 5s ease-in-out;
+}
+  
+.popup .close {
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    transition: all 200ms;
+    font-size: 40px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #333;
+}
+
 /* Navigation - Drop-downs */
 
 .dropdown {
@@ -1172,6 +1206,44 @@ footer > .two-col {
     padding: 24px 32px;
 }
 
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 200ms;
+    visibility: hidden;
+    opacity: 0;
+  }
+.overlay:target {
+    visibility: visible;
+    opacity: 1;
+}
+
+.popup {
+    margin: 300px auto;
+    padding: 20px;
+    /* background: #fff;
+    border-radius: 20px; */
+    width: 45%;
+    /* height: 20%; */
+    position: relative;
+    transition: all 5s ease-in-out;
+}
+  
+.popup .close {
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    transition: all 200ms;
+    font-size: 40px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #333;
+}
+
 /* Desktop - drop down list */
 
 details {
@@ -1330,57 +1402,6 @@ button {
     display: flex;
     gap: 24px;
 }
-
-
-.overlay {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.7);
-    transition: opacity 200ms;
-    visibility: hidden;
-    opacity: 0;
-  }
-.overlay:target {
-    visibility: visible;
-    opacity: 1;
-}
-
-.popup {
-    margin: 300px auto;
-    padding: 20px;
-    /* background: #fff;
-    border-radius: 20px; */
-    width: 45%;
-    /* height: 20%; */
-    position: relative;
-    transition: all 5s ease-in-out;
-}
-  
-/* .popup h2 {
-margin-top: 0;
-color: #333;
-font-family: Tahoma, Arial, sans-serif;
-} */
-.popup .close {
-    position: absolute;
-    top: 10px;
-    right: 30px;
-    transition: all 200ms;
-    font-size: 40px;
-    font-weight: bold;
-    text-decoration: none;
-    color: #333;
-}
-/* .popup .close:hover {
-color: #06D85F;
-} */
-/* .popup .content {
-max-height: 30%;
-overflow: auto;
-} */
 
 }
 
